[INJIVER-898] - remove unwanted imports
Signed-off-by: sarupmoni <93664377+sarupmoni@users.noreply.github.com>